exports[`(.not).toHaveUnprocessableEntityStatus > using axios > .not.toHaveUnprocessableEntityStatus > fails when response have status code 422 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUnprocessableEntityStatus()</intensity>

Expected status code to not be 422 received:
  <red>422</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 422,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUnprocessableEntityStatus > using axios > .toHaveUnprocessableEntityStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUnprocessableEntityStatus()</intensity>

Expected status code to be 422 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUnprocessableEntityStatus > using got > .not.toHaveUnprocessableEntityStatus > fails when response have status code 422 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUnprocessableEntityStatus()</intensity>

Expected status code to not be 422 received:
  <red>422</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 422,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveUnprocessableEntityStatus > using got > .toHaveUnprocessableEntityStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUnprocessableEntityStatus()</intensity>

Expected status code to be 422 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
